--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - db
   db:
     image: postgres:9.6
-    # ports:
-    #   - "5437:5432"
+    ports:
+      - "5437:5432"
     volumes:
       - ./conf/db:/docker-entrypoint-initdb.d
     environment:
